# fluvius-ordinal

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
tests/: __init__.py
